<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pandemic Register</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="repeat_password">REPEAT PASSWORD</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="signup">signup</string>
    <string name="don_t_have_an_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="welcome">Welcome</string>
    <string name="title_activity_maps">Overview</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_items">
        <item>Home</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Maps</string>
    <string name="tab_text_2">List</string>
    <string name="location">LOCATION</string>
    <string name="please_select_a_status">Please select a Status</string>
    <string name="call">Make a call</string>
    <string name="send_text">Send a text</string>
    <string name="no_data_available">No Data Available</string>
    <string name="cannot_retreive_location">Cannot retrieve location data</string>
    <string name="cannot_retieve_restart">Cannot retrieve location data, please restart App</string>
    <string name="invalid_email">Oops, invalid email or passwords did not match</string>
    <string name="input_error">Input Error</string>
    <string name="no_data">No data</string>
    <string name="ok">OK</string>
    <string name="sick">Sick</string>
    <string name="need">need</string>
    <string name="can">can</string>
    <string name="no_phone">No Phone number detected</string>
    <string name="hello_how_are">Hello, how are you</string>
    <string name="sign_in">sign in</string>
    <string name="or">OR</string>
    <string name="i_am_ok">I am OK</string>
    <string name="i_am_sick">I feel Sick</string>
    <string name="i_need_help">I need Help</string>
    <string name="i_can_help">I can Help</string>
    <string name="select_language">Select language</string>
    <string name="default_language">Default</string>
    <string name="ui">UI</string>
    <string name="switch_between">Switch between Dark and Light UI</string>
    <string name="help">Help</string>
    <string name="about_us">About us</string>
    <string name="sign_out">Sign out</string>
    <string name="number_of_sick_people">Number of Sick People:</string>
    <string name="people_in_need_of_help">People in need of help:</string>
    <string name="people_who_can_help">People who can help:</string>
    <string name="help_string_body">This app is to be used in case of a Pandemic, this app allows you to know the location and status of someone who is directly affected by the pandemic and also allows you to share and see the status of the person. The map and the list are connected to a central database and update in realtime to give you the latest data.
        Different colour on the map indicates different status.\n
        \n
        Green means the person is OK \n Red mean he is sick \n  Yellow means he needs help \n Blue means he can help \n  Azure means no status can be found. \n
        \n
        GPS needs to be turned on in order to use this app \n </string>
    <string name="help_string_hint">Here in this help text, you can find the general instructions on how to use this app</string>
    <string name="developer_email">Developer Email:</string>
    <string name="an571sha_htwg_kosntanz_de">an571sha@htwg-konstanz.de</string>
    <string name="disclaimer">If you have any feedback or suggestion regarding this project, feel free to contact me</string>
    <string name="about_us_top">Pandemie Register has been developed as a part of Mobile Anwendung project at the HTWG Konstanz. This project has been developed using Firebase, Android Studio and written in JAVA</string>
    <string name="developer_name">Developer name:</string>
    <string name="animesh_sharma">Animesh Sharma</string>
    <string name="contact">contact</string>
</resources>
